--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
 
     <div class="proyectos">
-      <h1>Projects I've worked</h1>
+      <h1>Projects I've worked on</h1>
       <div class="container" id="projects">
         <div id="resumeProj">
           <h2>Resume</h2>
