--- a/aboutme.html
+++ b/aboutme.html
@@ -5,8 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hobbies</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lilita+One&display=swap"
+    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lilita+One&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./hobbies.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Bree+Serif&display=swap" rel="stylesheet">
 </head>
 
 <body>
