--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
       <h1>Projects I've worked on</h1>
       <div class="container" id="projects">
         <div id="resumeProj">
-          <h2>Resume</h2>
+          <h2>Resume Project</h2>
           <a href="https://omarzziano.github.io/My-Resume/"><img src="./images/resume.png"></a>
         </div>
         <div id="art">
-          <h2>Art</h2>
+          <h2>Art Project</h2>
           <a href="https://omarzziano.github.io/Arte/"><img src="./images/art.png"></a>
         </div>
         <div id="pricing">
-          <h2>Pricing</h2>
+          <h2>Pricing Project</h2>
           <a href="https://omarzziano.github.io/Pricing-table/"><img src="./images/pricingtable.png"></a>
         </div>
         <div id="tindog">
-          <h2>Tindog</h2>
+          <h2>Tindog Project</h2>
           <a href="https://omarzziano.github.io/TinDog/"><img src="./images/tindog.png"></a>
         </div>
 
